Add header include

--- a/disclaimer.html
+++ b/disclaimer.html
@@ -2,6 +2,8 @@
 title: Legal Disclaimer | Inventures | Impact Venture Capital Funds
 ---
 
+{% include header.html %}
+
 <h2>Legal Disclaimer</h2>
 
 <p>This website is for purely illustrative purposes and contains information on private investment schemes promoted, administered and/or managed by Mymicroinvest SA. Access to this website is restricted in Belgium and might be restricted in other jurisdictions as well. By accessing to this website, you acknowledge that your investor profile matches the regulatory applicable regulatory constraints.</p>
