--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 title: Inventures | Impact Venture Capital Funds
 ---
 
+{% include header.html %}
+
 <h2>The First European Crowd-Venturing Impact Fund</h2>
 
 <h3>What is Inventures</h3>
