--- a/team-board.html
+++ b/team-board.html
@@ -2,6 +2,8 @@
 title: Board & Team | Inventures | Impact Venture Capital Funds
 ---
 
+{% include header.html %}
+
 <h2>Board</h2>
 
 <p>Inventures is managed by MyMicroInvest S.A.. The Inventures investment committee meets approximately once a month to review investments, make decisions, and act as a representative of shareholders and management.</p>
