--- a/venture-capital-funds/inventures-i.html
+++ b/venture-capital-funds/inventures-i.html
@@ -2,6 +2,8 @@
 title: Inventures I | Inventures | Impact Venture Capital Funds
 ---
 
+{% include header.html %}
+
 <img src='/assets/inventures1.png' alt='Inventures I logo'/>
 
 <h2>Story and figures</h2>
