--- a/venture-capital-funds/inventures-ii.html
+++ b/venture-capital-funds/inventures-ii.html
@@ -1,6 +1,8 @@
 ---
-title: Inventures II | Inventures
+title: Inventures II | Inventures | Impact Venture Capital Funds
 ---
+
+{% include header.html %}
 
 <img src='/assets/inventures2.png' alt='Inventures II logo'/>
 
