--- a/call-for-investors.html
+++ b/call-for-investors.html
@@ -2,6 +2,8 @@
 title: Call For Investors | Inventures | Impact Venture Capital Funds
 ---
 
+{% include header.html %}
+
 <h2>Call For Investors</h2>
 
 <img src='/assets/desert.jpg' alt='People in a desert'/>
