--- a/cookie-policy.html
+++ b/cookie-policy.html
@@ -2,6 +2,8 @@
 title: Cookie Policy | Inventures | Impact Venture Capital Funds
 ---
 
+{% include header.html %}
+
 <h2>Cookie Policy</h2>
 
 <h3>What is a “Cookie”?</h3>
