--- a/venture-capital-funds/index.html
+++ b/venture-capital-funds/index.html
@@ -2,6 +2,8 @@
 title: Venture Capital Funds | Inventures | Impact Venture Capital Funds
 ---
 
+{% include header.html %}
+
 <p>Our venture capital funds</p>
 
 <a href='inventures-i'>
