--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 title: Inventures | Impact Venture Capital Funds
 ---
 
-{% include header.html %}
+{% include nav.html %}
 
 <h2>The First European Crowd-Venturing Impact Fund</h2>
 
