--- a/team-board.html
+++ b/team-board.html
@@ -2,7 +2,7 @@
 title: Board & Team | Inventures | Impact Venture Capital Funds
 ---
 
-{% include header.html %}
+{% include nav.html %}
 
 <h2>Board</h2>
 
