--- a/venture-capital-funds/index.html
+++ b/venture-capital-funds/index.html
@@ -2,7 +2,7 @@
 title: Venture Capital Funds | Inventures | Impact Venture Capital Funds
 ---
 
-{% include header.html %}
+{% include nav.html %}
 
 <p>Our venture capital funds</p>
 
