--- a/venture-capital-funds/inventures-i.html
+++ b/venture-capital-funds/inventures-i.html
@@ -2,7 +2,7 @@
 title: Inventures I | Inventures | Impact Venture Capital Funds
 ---
 
-{% include header.html %}
+{% include nav.html %}
 
 <img src='/assets/inventures1.png' alt='Inventures I logo'/>
 
