--- a/call-for-investors.html
+++ b/call-for-investors.html
@@ -2,7 +2,7 @@
 title: Call For Investors | Inventures | Impact Venture Capital Funds
 ---
 
-{% include header.html %}
+{% include nav.html %}
 
 <h2>Call For Investors</h2>
 
