--- a/cookie-policy.html
+++ b/cookie-policy.html
@@ -2,7 +2,7 @@
 title: Cookie Policy | Inventures | Impact Venture Capital Funds
 ---
 
-{% include header.html %}
+{% include nav.html %}
 
 <h2>Cookie Policy</h2>
 
