--- a/disclaimer.html
+++ b/disclaimer.html
@@ -2,7 +2,7 @@
 title: Legal Disclaimer | Inventures | Impact Venture Capital Funds
 ---
 
-{% include header.html %}
+{% include nav.html %}
 
 <h2>Legal Disclaimer</h2>
 
