--- a/venture-capital-funds/inventures-ii.html
+++ b/venture-capital-funds/inventures-ii.html
@@ -2,7 +2,7 @@
 title: Inventures II | Inventures | Impact Venture Capital Funds
 ---
 
-{% include header.html %}
+{% include nav.html %}
 
 <img src='/assets/inventures2.png' alt='Inventures II logo'/>
 
