Extract general layout

--- a/call-for-investors.html
+++ b/call-for-investors.html
@@ -1,8 +1,7 @@
 ---
-title: Call For Investors | Inventures | Impact Venture Capital Funds
+layout: default
+title: Call For Investors
 ---
-
-{% include nav.html %}
 
 <h2>Call For Investors</h2>
 
@@ -35,5 +34,3 @@ Impact targets are:</p>
 
 <p>Interested in investing for Inventures II?<br/>
 We are willing to provide more information.</p>
-
-{% include footer.html %}
