--- a/cookie-policy.html
+++ b/cookie-policy.html
@@ -1,8 +1,7 @@
 ---
-title: Cookie Policy | Inventures | Impact Venture Capital Funds
+layout: default
+title: Cookie Policy
 ---
-
-{% include nav.html %}
 
 <h2>Cookie Policy</h2>
 
@@ -47,5 +46,3 @@ title: Cookie Policy | Inventures | Impact Venture Capital Funds
 <p>Indeed, if you have any concerns about our use of cookies, you can choose to disable them, in particular by changing your browser settings to block certain types of cookies.</p>
 
 <p>The method for erasing cookies varies from one browser to another. For more information on the procedure, consult your browser. Explanations for their deletion by browser type are available on the site: <a href='https://cookiepedia.co.uk/how-to-manage-cookies' title='How to Manage Cookies'>cookiepedia.co.uk</a> or the site <a href='https://www.aboutcookies.org/' title='a guide to deleting and controlling cookies guide to deleting and controlling cookies'>aboutcookies.org</a>.</p>
-
-{% include footer.html %}
