--- a/disclaimer.html
+++ b/disclaimer.html
@@ -1,8 +1,7 @@
 ---
-title: Legal Disclaimer | Inventures | Impact Venture Capital Funds
+layout: default
+title: Legal Disclaimer
 ---
-
-{% include nav.html %}
 
 <h2>Legal Disclaimer</h2>
 
@@ -27,5 +26,3 @@ title: Legal Disclaimer | Inventures | Impact Venture Capital Funds
 <h3>Other jurisdictions</h3>
 
 <p>Access to this website, and the offering, sale and delivery of the Shares may, in certain jurisdictions other than Belgium, be restricted by law. This website does not constitute an offer of, or an invitation by or on behalf of the Fund, and addressed to prospective investors outside Belgium, to subscribe for or purchase any of the Shares. This website may therefore not be used for the purpose of an offer to, or a solicitation by, anyone in any jurisdiction or in any circumstances in which such offer or solicitation is not authorised or is unlawful.</p>
-
-{% include footer.html %}
