--- a/index.html
+++ b/index.html
@@ -1,8 +1,7 @@
 ---
-title: Inventures | Impact Venture Capital Funds
+layout: default
+title: Inventures
 ---
-
-{% include nav.html %}
 
 <h2>The First European Crowd-Venturing Impact Fund</h2>
 
@@ -80,5 +79,3 @@ LOGO II
 <p>Do you have a European impact business which is striving to improve our society? Are you interested in raising capital from a fund and also conducting a crowdfunding campaign? Please fill in an application to raise funds on <a href='https://www.mymicorinvest.com' title='Investment crowdfunding together with professionals'>MyMicroInvest</a> or send us a message to know more.</p>
 
 <p><a href='https://www.mymicroinvest.com/raise'>APPLY TO RAISE FUNDS</a></p>
-
-{% include footer.html %}
