--- a/venture-capital-funds/index.html
+++ b/venture-capital-funds/index.html
@@ -1,8 +1,7 @@
 ---
-title: Venture Capital Funds | Inventures | Impact Venture Capital Funds
+layout: default
+title: Venture Capital Funds
 ---
-
-{% include nav.html %}
 
 <p>Our venture capital funds</p>
 
@@ -15,5 +14,3 @@ title: Venture Capital Funds | Inventures | Impact Venture Capital Funds
 </a>
 
 <img src='/assets/magic5.jpg' title='Magic 5 event @ Ghent'/>
-
-{% include footer.html %}
