--- a/venture-capital-funds/inventures-i.html
+++ b/venture-capital-funds/inventures-i.html
@@ -1,8 +1,7 @@
 ---
-title: Inventures I | Inventures | Impact Venture Capital Funds
+layout: default
+title: Inventures I
 ---
-
-{% include nav.html %}
 
 <img src='/assets/inventures1.png' alt='Inventures I logo'/>
 
@@ -110,5 +109,3 @@ title: Inventures I | Inventures | Impact Venture Capital Funds
 
 <img src='/assets/zencar.jpg' alt='ZenCar logo'/>
 <p><a href='https://www.zencar.eu/'>Zen Car</a> is a Belgian car sharing service of 100% electric vehicle fleet with dedicated charging stations.</p>
-
-{% include footer.html %}
