--- a/venture-capital-funds/inventures-ii.html
+++ b/venture-capital-funds/inventures-ii.html
@@ -1,8 +1,7 @@
 ---
-title: Inventures II | Inventures | Impact Venture Capital Funds
+layout: default
+title: Inventures II
 ---
-
-{% include nav.html %}
 
 <img src='/assets/inventures2.png' alt='Inventures II logo'/>
 
@@ -55,5 +54,3 @@ title: Inventures II | Inventures | Impact Venture Capital Funds
 <hr/>
 
 <p>Intrerested? Find out the <a href='/call-for-investors'>benefits for investors</a> and get in touch with our team.</p>
-
-{% include footer.html %}
