--- a/team-board.html
+++ b/team-board.html
@@ -1,8 +1,7 @@
 ---
-title: Board & Team | Inventures | Impact Venture Capital Funds
+layout: default
+title: Board & Team
 ---
-
-{% include nav.html %}
 
 <h2>Board</h2>
 
@@ -97,5 +96,3 @@ Peter holds a Bachelor and Master’s Degree in Business Engineering from the KU
 <h2>Contact</h2>
 
 <p>Feel free to contact our team if you have any questions. You can call us at <a href='tel:+3223184712'>+32 2 318 47 12</a>, Monday to Friday, 9am-6pm, or contact us via <a href='mailto:inventures@mymicroinvest.com' title='Get in touch'>mail</a>.</p>
-
-{% include footer.html %}
