Add design homepage

--- a/venture-capital-funds/index.html
+++ b/venture-capital-funds/index.html
@@ -6,11 +6,11 @@ title: Venture Capital Funds
 <p>Our venture capital funds</p>
 
 <a href='inventures-i'>
-  <img src='/assets/inventures1.png' title='Inventures I'/>
+  <img src='/assets/inventures1.svg' title='Inventures I'/>
 </a>
 
 <a href='inventures-ii'>
-  <img src='/assets/inventures2.png' title='Inventures II'/>
+  <img src='/assets/inventures2.svg' title='Inventures II'/>
 </a>
 
 <img src='/assets/magic5.jpg' title='Magic 5 event @ Ghent'/>
