--- a/venture-capital-funds/inventures-i.html
+++ b/venture-capital-funds/inventures-i.html
@@ -3,7 +3,7 @@ layout: default
 title: Inventures I
 ---
 
-<img src='/assets/inventures1.png' alt='Inventures I logo'/>
+<img src='/assets/inventures1.svg' alt='Inventures I logo'/>
 
 <h2>Story and figures</h2>
 
