--- a/venture-capital-funds/inventures-ii.html
+++ b/venture-capital-funds/inventures-ii.html
@@ -3,7 +3,7 @@ layout: default
 title: Inventures II
 ---
 
-<img src='/assets/inventures2.png' alt='Inventures II logo'/>
+<img src='/assets/inventures2.svg' alt='Inventures II logo'/>
 
 <h2>Story</h2>
 
