--- a/index.html
+++ b/index.html
@@ -3,79 +3,103 @@ layout: default
 title: Inventures
 ---
 
-<h2>The First European Crowd-Venturing Impact Fund</h2>
+<div class='px3 py4 bg-cover'
+  style='background-image: url(/assets/building.jpg)'>
+  <div class='container'>
+    <h1 class='white inline-block p1' style='background-color: rgba(5,5,5,0.3)'>The First European Crowd-Venturing Impact Fund</h1>
+  </div>
+</div>
 
-<h3>What is Inventures</h3>
+<div class='container px2'>
+  <div class='col sm-col-7 mt3'>
+    <h3>What is Inventures</h3>
 
-<p>Inventures is a European venture capital fund that builds a better world through a portfolio of investments in sustainable businesses.</p>
+    <p>Inventures is a European venture capital fund that builds a better world through a portfolio of investments in sustainable businesses.</p>
 
-<p>The firm has two funds: Inventures I & Inventures II.</p>
+    <p>The firm has two funds: <a href='venture-capital-funds/inventures-i'>Inventures I</a> & <a href='venture-capital-funds/inventures-ii'>Inventures II</a>.</p>
 
-<h3>History in brief</h3>
+    <h3>History in brief</h3>
 
-<p>Inventures was created to support <strong>early stage smart and innovative European businesses</strong>, to support <strong>sustainable job growth</strong> and <strong>empower entrepreneurs</strong>. Inventures empowers citizenship co-investments through a crowdfunding platform, MyMicroInvest.</p>
+    <p>Inventures was created to support <strong>early stage smart and innovative European businesses</strong>, to support <strong>sustainable job growth</strong> and <strong>empower entrepreneurs</strong>. Inventures empowers citizenship co-investments through a crowdfunding platform, MyMicroInvest.</p>
+  </div>
 
-<h3>Key figures</h3>
+  <div class='col sm-col-5'>
+    {% include key-figures.html %}
+  </div>
 
-<p>Since 1 July 2012:</p>
+  <div class='sm-col-8 mx-auto'>
+    {% include magic5-video.html %}
+  </div>
 
-<ul>
-  <li>825 Applications received</li>
-  <li>321 Screened projects</li>
-  <li>57 Investment committee reviews</li>
-  <li>15 Companies selected for investment</li>
-</ul>
+  <h3 class='col col-12'>Our investment strategy</h3>
 
-<p>Latest update: April 2017</p>
+  <div class='clearfix mxn2'>
+    <div class='col sm-col-6 px2'>
+      <p>Inventures is open to invest in European impact businesses: larger amounts in confirmed scale-ups (50%), and smaller amounts in a number of start-ups (20%) with reinvestment in follow-up rounds (30%).</p>
 
-<iframe width='560px' height='315px' src='https://www.youtube-nocookie.com/embed/HeF_6vktHq0?rel=0&amp;controls=0&amp;showinfo=0' frameborder='0' allowfullscreen></iframe>
+      <p>Inventures II always requests a seat in the board of directors of each business in its portfolio.</p>
+    </div>
 
-<p>Inventures presented by Ines Mertens and Olivier De Duve during the Magic 5 live event Ghent, Belgium (November 2016)</p>
+    <div class='col sm-col-6 px2 mb3'>
+      <p>Both Inventures I & II empower citizens and help to democratize venture capital by offering co-investment on a crowdfunding platform, MyMicroInvest.</p>
 
-<h3>Our investment strategy</h3>
+      <p>Including citizens in a multi-stakeholder partnership reinforces the selection of companies, and increases the chances of success by creating a large community of ambassadors sharing the same values.</p>
+    </div>
+  </div>
 
-<p>Inventures is open to invest in European impact businesses: larger amounts in confirmed scale-ups (50%), and smaller amounts in a number of start-ups (20%) with reinvestment in follow-up rounds (30%).</p>
+  <div class='col sm-col-6 bg-athens-gray p1 mt2 mb2'>
+    <div class='center py2'>
+      <img src='/assets/inventures1.svg' width='70%' alt='Inventures I'/>
+    </div>
 
-<p>Inventures II always requests a seat in the board of directors of each business in its portfolio.</p>
+    <p>Inventures I is a €15 Million fund that focuses on seed, early stage and growth businesses, and has selected 15 companies for investment.</p>
 
-<p>Both Inventures I & II empower citizens and help to democratize venture capital by offering co-investment on a crowdfunding platform, MyMicroInvest.</p>
+    <p>See the <a href='/venture-capital-funds/inventures-i'>portfolio here</a>. The fund is now closed to new businesses, but Inventures II is just getting started.</p>
+  </div>
 
-<p>Including citizens in a multi-stakeholder partnership reinforces the selection of companies, and increases the chances of success by creating a large community of ambassadors sharing the same values.</p>
+  <div class='col sm-col-6 bg-athens-gray p1 mt2 mb2'>
+    <div class='center py2'>
+      <img src='/assets/inventures2.svg' width='70%' alt='Inventures II'/>
+    </div>
 
-LOGO I
+    <p>Inventures II SDG Growth is a venture capital fund currently accepting new investment. The fund has raised €15 Million so far, and aims to raise €50 Million. The fund will invest in 35 promising start-ups and scale-ups with a high growth potential. Inventures II is unique because it focuses on businesses that positively impact the United Nations Sustainable Development Goals (SDGs).</p>
+  </div>
 
-<p>Inventures I is a €15 Million fund that focuses on seed, early stage and growth businesses, and has selected 15 companies for investment.</p>
+  <div class='col col-12'>
+    <h3>Co-investing with crowdfunding</h3>
 
-<p>See the portfolio here. The fund is now closed to new businesses, but Inventures II is just getting started.</p>
+    <p>Inventures is unique because it is coupled with crowdfunding, to gauge the market for each business by testing it with co-investment.</p>
 
-LOGO II
+    <div class='clearfix mxn2'>
+      <p class='col sm-col-6 px2'>Crowdfunding is a collective investment in a business or product. Equity crowdfunding allows the public to participate in venture capital by purchasing Notes for small amounts (currently €100), which when added together in our experience, can reach a larger amount of €50,000 – €4 Million.</p>
 
-<p>Inventures II SDG Growth is a venture capital fund currently accepting new investment. The fund has raised €15 Million so far, and aims to raise €50 Million. The fund will invest in 35 promising start-ups and scale-ups with a high growth potential. Inventures II is unique because it focuses on businesses that positively impact the United Nations Sustainable Development Goals (SDGs).</p>
+      <p class='col sm-col-6 px2'>Our team believes convincing the crowd to invest with crowdfunding will prove a market potential or fit. Crowdfunding helps a business to build a community of ambassadors, and generate positive marketing effects. Further, an early go-to-market experience is better than a late project crash, after years of investment and reinvestment.</p>
+    </div>
+  </div>
 
-<h3>Co-investing with crowdfunding</h3>
+  <p class='col col-12 center py3'>Read more about crowdfunding on our platform: <a href='https://www.mymicroinvest.com' title='Investment crowdfunding together with professionals'>MyMicroInvest</a></p>
 
-<p>Inventures is unique because it is coupled with crowdfunding, to gauge the market for each business by testing it with co-investment.</p>
+  <div class='clearfix mxn2'>
+    <div class='col sm-col-6 px2'>
+      <img src='/assets/investors.jpg' alt='Investors at our Bamboo Growth event'/>
 
-<p>Crowdfunding is a collective investment in a business or product. Equity crowdfunding allows the public to participate in venture capital by purchasing Notes for small amounts (currently €100), which when added together in our experience, can reach a larger amount of €50,000 – €4 Million.</p>
+      <h3 class='center regular py1'>Investor</h3>
 
-<p>Our team believes convincing the crowd to invest with crowdfunding will prove a market potential or fit. Crowdfunding helps a business to build a community of ambassadors, and generate positive marketing effects. Further, an early go-to-market experience is better than a late project crash, after years of investment and reinvestment.</p>
+      <p>Are you interested in joining Inventures II as an investor?</p>
 
-<p>Read more about crowdfunding on our platform: <a href='https://www.mymicroinvest.com' title='Investment crowdfunding together with professionals'>MyMicroInvest.com</a></p>
+      <p>If you’re willing to commit a minimum of €100,000 which will help support businesses that follow the UN SDGs, find out the <a href='/for-investors'>benefits</a> and contact us.</p>
 
-<h3>Investor</h3>
+      <a href='/call-for-investors' class='btn btn-primary bg-sunset-orange h5 mt1 mb2'>CALL FOR INVESTORS</a>
+    </div>
 
-<img src='/assets/investors.jpg' alt='Investors at our Bamboo Growth event'/>
+    <div class='col sm-col-6 px2'>
+      <img src='/assets/entrepreneur.jpg' alt='Thomas presenting at our Bamboo Growth event'/>
 
-<p>Are you interested in joining Inventures II as an investor?</p>
+      <h3 class='center regular py1'>Entrepreneur</h3>
 
-<p>If you’re willing to commit a minimum of €100,000 which will help support businesses that follow the UN SDGs, find out the <a href='/for-investors'>benefits</a> and contact us.</p>
+      <p>Do you have a European impact business which is striving to improve our society? Are you interested in raising capital from a fund and also conducting a crowdfunding campaign? Please fill in an application to raise funds on <a href='https://www.mymicorinvest.com' title='Investment crowdfunding together with professionals'>MyMicroInvest</a> or send us a message to know more.</p>
 
-<p><a href='/call-for-investors'>CALL FOR INVESTORS</a></p>
-
-<h3>Entrepreneur</h3>
-
-<img src='/assets/entrepreneur.jpg' alt='Thomas presenting at our Bamboo Growth event'/>
-
-<p>Do you have a European impact business which is striving to improve our society? Are you interested in raising capital from a fund and also conducting a crowdfunding campaign? Please fill in an application to raise funds on <a href='https://www.mymicorinvest.com' title='Investment crowdfunding together with professionals'>MyMicroInvest</a> or send us a message to know more.</p>
-
-<p><a href='https://www.mymicroinvest.com/raise'>APPLY TO RAISE FUNDS</a></p>
+      <a href='https://www.mymicroinvest.com/raise' class='btn btn-primary bg-sunset-orange h5 mt1 mb2'>APPLY TO RAISE FUNDS</a>
+    </div>
+  </div>
+</div>
