Add design for Call For Investors

--- a/call-for-investors.html
+++ b/call-for-investors.html
@@ -3,34 +3,51 @@ layout: default
 title: Call For Investors
 ---
 
-<h2>Call For Investors</h2>
+<div class='px3 py4 bg-cover' style='background-image: url(/assets/desert.jpg); background-size: cover'>
+  <div class='container'>
+    <h1 class='white inline-block p1' style='background-color: rgba(5,5,5,0.3)'>Call For Investors</h1>
+  </div>
+</div>
 
-<img src='/assets/desert.jpg' alt='People in a desert'/>
+<div class='container px2 mt3'>
+  <div class='clearfix mxn2'>
+    <div class='sm-col sm-col-6 px2'>
+      <h3>Invest with Inventures</h3>
 
-<h3>Invest with Inventures</h3>
+      <p>The Inventures II fund is currently open for investment with a commitment deadline set to 31 December 2017.</p>
 
-<p>The Inventures II fund is currently open for investment with a commitment deadline set to 31 December 2017.</p>
+      <p>If you are willing to invest a minimum of  €100,000 to support businesses that follow the UN SDGs, please contact us and we’ll arrange a meeting.</p>
+    </div>
 
-<p>If you are willing to invest a minimum of  €100,000 to support businesses that follow the UN SDGs, please contact us and we’ll arrange a meeting.</p>
+    <div class='sm-col sm-col-6 px2'>
+      <img src='/assets/ines.jpg' alt='Ines presenting at the Magic 5 event in Ghent'/>
+    </div>
+  </div>
 
-<img src='/assets/ines.jpg' alt='Ines presenting at the Magic 5 event in Ghent'/>
+  <div class='clearfix mxn2 mt3'>
+    <div class='sm-col sm-col-6 px2'>
+      <img src='/assets/man.jpg' alt='Man in a meeting'/>
+    </div>
 
-<h2>Benefits for investors</h2>
+    <div class='sm-col sm-col-6 px2'>
+      <h2>Benefits for investors</h2>
 
-<p>Financial target: 15% annual Internal Rate of Return (IRR)<br/>
-Impact targets are:</p>
+      <p>Financial target: 15% annual Internal Rate of Return (IRR)<br/>Impact targets are:</p>
 
-<ul>
-  <li>Min 75% of the impact indicators reached (innovation, climate, health, social, etc.)</li>
-  <li>Min 350 new jobs in Europe</li>
-  <li>Min 75% of the projects co-financed with citizens in participative crowdfunding</li>
-</ul>
+      <ul>
+        <li>Min 75% of the impact indicators reached (innovation, climate, health, social, etc.)</li>
+        <li>Min 350 new jobs in Europe</li>
+        <li>Min 75% of the projects co-financed with citizens in participative crowdfunding</li>
+      </ul>
 
-<a href='Download our teaser'>DOWNLOAD OUR 2-PAGE SUMMARY (PDF)</a>
+      <a href='/assets/Inventures-II-Teaser-April2017.pdf' title='Download our teaser' class='btn btn-primary bg-sunset-orange h5 mt1 mb2'>DOWNLOAD OUR 2-PAGE SUMMARY (PDF)</a>
+    </div>
+  </div>
 
-<img src='/assets/man.jpg' alt='Man in a meeting'/>
+  <hr class='mt3 mb3' />
 
-<hr/>
-
-<p>Interested in investing for Inventures II?<br/>
-We are willing to provide more information.</p>
+  <div class='col col-12 center'>
+    <p>Interested in investing for Inventures II?<br/>We are willing to provide more information.</p>
+    <a href='mailo:{{ site.email }}' class='btn btn-primary bg-sunset-orange h5 mt1 mb2'>CONTACT US</a>
+  </div>
+</div>
