--- a/index.html
+++ b/index.html
@@ -3,8 +3,7 @@ layout: default
 title: Inventures
 ---
 
-<div class='px3 py4 bg-cover'
-  style='background-image: url(/assets/building.jpg)'>
+<div class='px3 py4 bg-cover' style='background-image: url(/assets/building.jpg); background-size: cover'>
   <div class='container'>
     <h1 class='white inline-block p1' style='background-color: rgba(5,5,5,0.3)'>The First European Crowd-Venturing Impact Fund</h1>
   </div>
