--- a/team-board.html
+++ b/team-board.html
@@ -95,4 +95,4 @@ Peter holds a Bachelor and Master’s Degree in Business Engineering from the KU
 
 <h2>Contact</h2>
 
-<p>Feel free to contact our team if you have any questions. You can call us at <a href='tel:+3223184712'>+32 2 318 47 12</a>, Monday to Friday, 9am-6pm, or contact us via <a href='mailto:inventures@mymicroinvest.com' title='Get in touch'>mail</a>.</p>
+<p>Feel free to contact our team if you have any questions. You can call us at <a href='tel:+3223184712'>+32 2 318 47 12</a>, Monday to Friday, 9am-6pm, or contact us via <a href='mailto:{{ site.email }}' title='Get in touch'>mail</a>.</p>
