Add design Board & Team

--- a/team-board.html
+++ b/team-board.html
@@ -3,96 +3,120 @@ layout: default
 title: Board & Team
 ---
 
-<h2>Board</h2>
+<div class='px3 py4 bg-cover' style='background-image: url(/assets/mountains.jpg); background-size: cover'>
+  <div class='container'>
+    <h1 class='white inline-block p1' style='background-color: rgba(5,5,5,0.3)'>Board & Team</h1>
+  </div>
+</div>
 
-<p>Inventures is managed by MyMicroInvest S.A.. The Inventures investment committee meets approximately once a month to review investments, make decisions, and act as a representative of shareholders and management.</p>
+<div class='container px2'>
+  <h1>Board</h1>
 
-<p>The Board of Directors of Inventures II is composed of the three managing team members plus MyMicroInvest, acting as managing director. Similar to Inventures I, the board has set up a separate organ named the Investment Committee. The Investment Committee is composed of seven directors, plus three other members. The Investment Committee is an independent shareholders representative.</p>
+  <div class='clearfix mxn2'>
+    <div class='col sm-col-6 px2'>
+      <p>Inventures is managed by MyMicroInvest S.A.. The Inventures investment committee meets approximately once a month to review investments, make decisions, and act as a representative of shareholders and management.</p>
 
-<p>Alongside the Board and the Investment Committee, there is an Advisory Board. It acts as strategic advisor to the Board of Directors for questions related to impact assessment and conflicts of interests. It consists of one MyMicroInvest team member and two independent experts in sustainability and/or corporate governance matters.</p>
+      <p>The Board of Directors of Inventures II is composed of the three managing team members plus MyMicroInvest, acting as managing director. Similar to Inventures I, the board has set up a separate organ named the Investment Committee. The Investment Committee is composed of seven directors, plus three other members. The Investment Committee is an independent shareholders representative.</p>
+    </div>
 
-<p>The Investment Committee includes:</p>
+    <div class='col sm-col-6 px2'>
+      <p>Alongside the Board and the Investment Committee, there is an Advisory Board. It acts as strategic advisor to the Board of Directors for questions related to impact assessment and conflicts of interests. It consists of one MyMicroInvest team member and two independent experts in sustainability and/or corporate governance matters.</p>
+    </div>
+  </div>
 
-<h3>Funds management</h3>
-<ul>
-  <li>Olivier de Duve</li>
-  <li>Gilles van der Meerschen</li>
-  <li>Bruno de Radzitzky</li>
-  <li>Inès Mertens</li>
-</ul>
+  <p>The Investment Committee includes:</p>
 
-<h3>Investors</h3>
-<ul>
-  <li>Charles Adriaenssen</li>
-  <li>Anne Prignon</li>
-  <li>Xavier Peters</li>
-</ul>
+  <div class='clearfix mxn2'>
+    <div class='col sm-col-4 px2 bg-athens-gray'>
+      <h2 class='h4'>Funds management</h2>
+      <ul>
+        <li>Olivier de Duve</li>
+        <li>Gilles van der Meerschen</li>
+        <li>Bruno de Radzitzky</li>
+        <li>Inès Mertens</li>
+      </ul>
+    </div>
 
-<h3>Other members</h3>
-<ul>
-  <li>Philippe Haspeslagh</li>
-  <li>John-Eric Bertrand</li>
-  <li>Charles de Liedekerke</li>
-</ul>
+    <div class='col sm-col-4 px2 bg-athens-gray'>
+      <h2 class='h4'>Investors</h2>
+      <ul>
+        <li>Charles Adriaenssen</li>
+        <li>Anne Prignon</li>
+        <li>Xavier Peters</li>
+      </ul>
+    </div>
 
-<h2>Team</h2>
+    <div class='col sm-col-4 px2 bg-athens-gray'>
+      <h2 class='h4'>Other members</h2>
+      <ul>
+        <li>Philippe Haspeslagh</li>
+        <li>John-Eric Bertrand</li>
+        <li>Charles de Liedekerke</li>
+      </ul>
+    </div>
+  </div>
 
-<p>Inventures is managed by MyMicroInvest S.A., which is composed of the following team:</p>
+  <h1>Team</h1>
 
-<h3>Olivier de Duve</h3>
-<p>Chief Executive Officer</p>
+  <p>Inventures is managed by MyMicroInvest S.A., which is composed of the following team:</p>
 
-<p>Olivier has 17 years of experience in investment banking, capital markets and investment management in New York, Paris and London with Bear Stearns, Deutsche Bank, IXIS and Shinsei International.</p>
-<p>In 2008, he decided to start his own venture with partners. His interest for disruptive technologies led him to become co-founder of Earlytracks S.A. He then launched SemCap, an advisory boutique focused on start-ups and SMEs.</p>
-<p>He is also a board member and private investor in various start-ups and is active in the Steering Committee of the “de Duve Institute”, a multidisciplinary biomedical research institute.</p>
-<p>He holds a Master of Science in Business engineering degree from the Solvay Business School and is a FSA registered investment advisor.</p>
+  <h2>Olivier de Duve</h2>
+  <p>Chief Executive Officer</p>
 
-<h3>Gilles van der Meerschen</h3>
-<p>Premium Clients</p>
+  <p>Olivier has 17 years of experience in investment banking, capital markets and investment management in New York, Paris and London with Bear Stearns, Deutsche Bank, IXIS and Shinsei International.</p>
+  <p>In 2008, he decided to start his own venture with partners. His interest for disruptive technologies led him to become co-founder of Earlytracks S.A. He then launched SemCap, an advisory boutique focused on start-ups and SMEs.</p>
+  <p>He is also a board member and private investor in various start-ups and is active in the Steering Committee of the “de Duve Institute”, a multidisciplinary biomedical research institute.</p>
+  <p>He holds a Master of Science in Business engineering degree from the Solvay Business School and is a FSA registered investment advisor.</p>
 
-<p>For more than 20 years, Gilles has built up a know-how with a strong track record in product marketing, strategic planning, process optimisation and people management. His network extends across all continents giving access to finance in the private company market place, be it hedge funds, high net-worth investors, private equity firms or family offices.</p>
-<p>Gilles is a board member of several high profile companies.</p>
-<p>Gilles holds a bachelor degree in Business and Administration and a master degree in Marketing from the European Business School of London. A few years later, he followed the Program for Executive Development (PED) at IMD.</p>
+  <h2>Gilles van der Meerschen</h2>
+  <p>Premium Clients</p>
 
-<h3>Bruno de Radzitzky</h3>
-<p>Head of Asset Management</p>
+  <p>For more than 20 years, Gilles has built up a know-how with a strong track record in product marketing, strategic planning, process optimisation and people management. His network extends across all continents giving access to finance in the private company market place, be it hedge funds, high net-worth investors, private equity firms or family offices.</p>
+  <p>Gilles is a board member of several high profile companies.</p>
+  <p>Gilles holds a bachelor degree in Business and Administration and a master degree in Marketing from the European Business School of London. A few years later, he followed the Program for Executive Development (PED) at IMD.</p>
 
-<p>Bruno has almost 25 years experience in M&A transactions in Europe, the USA, South America, Asia and South Africa. He started his career as a lawyer, member of the Brussels Bar. He then joined Etex (a Belgian group active in building materials around the world) as a Company Lawyer, and then as Senior Legal Counsel. He joined MyMicroInvest on January 1st 2017 as Head of the Asset Management.</p>
-<p>He served as a director of several Etex companies in Belgium, Luxembourg, France and Spain. He also was a board member and the Compliance Officer of the Etex Pension Fund.</p>
-<p>Bruno holds a Master’s Degree in Laws (Louvain-LN), a post degree in International and European Laws (VUB) and a LLM (Queen Mary & Westfield College).</p>
+  <h2>Bruno de Radzitzky</h2>
+  <p>Head of Asset Management</p>
 
-<h3>Inès Mertens de Wilmars</h3>
-<p>Investment Manager</p>
+  <p>Bruno has almost 25 years experience in M&A transactions in Europe, the USA, South America, Asia and South Africa. He started his career as a lawyer, member of the Brussels Bar. He then joined Etex (a Belgian group active in building materials around the world) as a Company Lawyer, and then as Senior Legal Counsel. He joined MyMicroInvest on January 1st 2017 as Head of the Asset Management.</p>
+  <p>He served as a director of several Etex companies in Belgium, Luxembourg, France and Spain. He also was a board member and the Compliance Officer of the Etex Pension Fund.</p>
+  <p>Bruno holds a Master’s Degree in Laws (Louvain-LN), a post degree in International and European Laws (VUB) and a LLM (Queen Mary & Westfield College).</p>
 
-<p>Inès has over eight years of experience in Business Valuations and Corporate Finance. She spent four years at Deloitte Corporate Finance where she gained her financial expertise in global corporate finance including business valuations, mergers, and acquisitions.</p>
-<p>In 2006, she moved to California where she gained extensive experience in business valuation theory and practice. She worked with companies in all stages of development, specifically with early stage companies in the Silicon Valley.</p>
-<p>She holds a Master’s degree in business administration from the University of Louvain-la-Neuve (UCL). She has become a member of the National Association of Certified Valuation Analyst (NACVA) and received the designation of Accredited Valuation Analyst (AVA).</p>
+  <h2>Inès Mertens de Wilmars</h2>
+  <p>Investment Manager</p>
 
-<h3>Philippine du Parc Locmaria</h3>
-<p>Investment Analyst</p>
+  <p>Inès has over eight years of experience in Business Valuations and Corporate Finance. She spent four years at Deloitte Corporate Finance where she gained her financial expertise in global corporate finance including business valuations, mergers, and acquisitions.</p>
+  <p>In 2006, she moved to California where she gained extensive experience in business valuation theory and practice. She worked with companies in all stages of development, specifically with early stage companies in the Silicon Valley.</p>
+  <p>She holds a Master’s degree in business administration from the University of Louvain-la-Neuve (UCL). She has become a member of the National Association of Certified Valuation Analyst (NACVA) and received the designation of Accredited Valuation Analyst (AVA).</p>
 
-<p>Philippine joined MyMicroInvest in 2016 as an Investment Analyst after completing two internships; as a Junior Investment Analyst at GBL in Brussels and in Mergers and Acquisitions at HSBC in Paris. After different work experiences in a Belgian SMO, Philippine decided to go into the exciting world of entrepreneurship.</p>
-<p>Philippine studied in Belgium and China. She post-graduated Magna Cum Laude from Business Engineering at Louvain School of Management (Finance and Management major).</p>
+  <h2>Philippine du Parc Locmaria</h2>
+  <p>Investment Analyst</p>
 
-<h3>Peter De Decker</h3>
-<p>Investment Analyst</p>
+  <p>Philippine joined MyMicroInvest in 2016 as an Investment Analyst after completing two internships; as a Junior Investment Analyst at GBL in Brussels and in Mergers and Acquisitions at HSBC in Paris. After different work experiences in a Belgian SMO, Philippine decided to go into the exciting world of entrepreneurship.</p>
+  <p>Philippine studied in Belgium and China. She post-graduated Magna Cum Laude from Business Engineering at Louvain School of Management (Finance and Management major).</p>
 
-<p>After a two-year period as Equity Analyst in an Antwerp-based asset management company, Peter joined MyMicroInvest in April 2015. His first working experience provided him a generalist expertise in analyzing stock-listed companies.
-Peter holds a Bachelor and Master’s Degree in Business Engineering from the KU Leuven, with an international experience in Siena (Italy) as an exchange student.</p>
-<p>Peter passed all three CFA exams.</p>
+  <h2>Peter De Decker</h2>
+  <p>Investment Analyst</p>
 
-<h3>Brice Moureau</h3>
-<p>Investment Analyst</p>
+  <p>After a two-year period as Equity Analyst in an Antwerp-based asset management company, Peter joined MyMicroInvest in April 2015. His first working experience provided him a generalist expertise in analyzing stock-listed companies.
+  Peter holds a Bachelor and Master’s Degree in Business Engineering from the KU Leuven, with an international experience in Siena (Italy) as an exchange student.</p>
+  <p>Peter passed all three CFA exams.</p>
 
-<p>After working as a management consultant in the Energy sector for one year, Brice joined MyMicroInvest in August 2016 as an Investment Analyst. Previously, he completed a 6-month internship in India and a 2-month internship in Chile, both in International Business Development.</p>
-<p>Brice graduated Magna Cum Laude from Solvay Business School (Université Libre de Bruxelles). There he specialized in Entrepreneurial Finance through writing his Master Thesis on the fundraising of a €110M Cleantech VC fund.</p>
+  <h2>Brice Moureau</h2>
+  <p>Investment Analyst</p>
 
-<h3>Sarah Kawa</h3>
-<p>Lawyer</p>
+  <p>After working as a management consultant in the Energy sector for one year, Brice joined MyMicroInvest in August 2016 as an Investment Analyst. Previously, he completed a 6-month internship in India and a 2-month internship in Chile, both in International Business Development.</p>
+  <p>Brice graduated Magna Cum Laude from Solvay Business School (Université Libre de Bruxelles). There he specialized in Entrepreneurial Finance through writing his Master Thesis on the fundraising of a €110M Cleantech VC fund.</p>
 
-<p>After several internships in international law firms and a working experience as a lawyer in the area of financial services, Sarah joined MyMicroInvest in March 2015.</p>
-<p>She holds a Bachelor Degree in law from the Saint-Louis University and a Master’s Degree in economic law from the Université Libre de Bruxelles, with international experiences in Rome and Tel-Aviv. She always had a great interest in both entrepreneurial and financial world.</p>
+  <h2>Sarah Kawa</h2>
+  <p>Lawyer</p>
 
-<h2>Contact</h2>
+  <p>After several internships in international law firms and a working experience as a lawyer in the area of financial services, Sarah joined MyMicroInvest in March 2015.</p>
+  <p>She holds a Bachelor Degree in law from the Saint-Louis University and a Master’s Degree in economic law from the Université Libre de Bruxelles, with international experiences in Rome and Tel-Aviv. She always had a great interest in both entrepreneurial and financial world.</p>
 
-<p>Feel free to contact our team if you have any questions. You can call us at <a href='tel:+3223184712'>+32 2 318 47 12</a>, Monday to Friday, 9am-6pm, or contact us via <a href='mailto:{{ site.email }}' title='Get in touch'>mail</a>.</p>
+  <hr class='mt3 mb3'/>
+
+  <div class='col col-12 center'>
+    <p>Feel free to contact our team if you have any questions. You can call us at <a href='tel:{{ site.phone }}'>{{ site.phone }}</a>, Monday to Friday, 9am-6pm, or contact us via <a href='mailto:{{ site.email }}' title='Get in touch'>mail</a>.</p>
+  </div>
+</div>
