Add design for Our VC Funds

--- a/venture-capital-funds/index.html
+++ b/venture-capital-funds/index.html
@@ -3,14 +3,28 @@ layout: default
 title: Venture Capital Funds
 ---
 
-<p>Our venture capital funds</p>
+<div class='px3 py4 bg-cover' style='background-image: url(/assets/building.jpg); background-size: cover'>
+  <div class='container'>
+    <h1 class='white inline-block p1' style='background-color: rgba(5,5,5,0.3)'>Our Venture Capital Funds</h1>
+  </div>
+</div>
 
-<a href='inventures-i'>
-  <img src='/assets/inventures1.svg' title='Inventures I'/>
-</a>
+<div class='container px2'>
+  <div class='clearfix mxn2 mt4'>
+    <div class='col sm-col-6 px2'>
+      <a href='inventures-i'>
+        <img src='/assets/inventures1.svg' width='80%' title='Inventures I'/>
+      </a>
+    </div>
+    <div class='col sm-col-6 px2'>
+      <a href='inventures-ii'>
+        <img src='/assets/inventures2.svg' width='80%' title='Inventures II'/>
+      </a>
+    </div>
+  </div>
 
-<a href='inventures-ii'>
-  <img src='/assets/inventures2.svg' title='Inventures II'/>
-</a>
+  <div class='sm-col-8 mx-auto mt4'>
+    <img src='/assets/magic5.jpg' title='Magic 5 event @ Ghent'/>
+  </div>
+</div>
 
-<img src='/assets/magic5.jpg' title='Magic 5 event @ Ghent'/>
